--- a/shim-api/pom.xml
+++ b/shim-api/pom.xml
@@ -9,13 +9,14 @@
   </parent>
 
   <artifactId>shim-api</artifactId>
-  <version>9.1.2020.09.00-324</version>
+  <version>9.1.2020.09.00-CUST-253</version>
   <packaging>bundle</packaging>
 
   <dependencies>
     <dependency>
       <groupId>pentaho-kettle</groupId>
       <artifactId>kettle-core</artifactId>
+      <version>9.1.0.6-CUST-253</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
