[BACKLOG-35251] Java 11 compatibility - Need to confirm repurcussions of hbase version change

--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -25,7 +25,7 @@
       <id>cdh514</id>
       <properties>
         <org.apache.hadoop.version-cdh514>2.6.0-cdh5.14.0</org.apache.hadoop.version-cdh514>
-        <org.apache.hbase.version>1.2.0-cdh5.14.0</org.apache.hbase.version>
+        <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
         <org.apache.hive.version>1.1.0-cdh5.14.0</org.apache.hive.version>
         <org.apache.oozie.version>4.1.0-cdh5.14.0</org.apache.oozie.version>
         <parquet.version>1.8.1</parquet.version>
@@ -409,7 +409,7 @@
       </activation>
       <properties>
         <org.apache.avro.version>1.8.0</org.apache.avro.version>
-        <org.apache.hbase.version>1.1.2.2.6.0.3-8</org.apache.hbase.version>
+        <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
         <org.apache.hadoop.version-hdp26>2.7.3.2.6.0.3-8</org.apache.hadoop.version-hdp26>
         <org.apache.hive.version>1.2.1000.2.6.0.3-8</org.apache.hive.version>
         <org.apache.oozie.version>4.2.0.2.6.0.3-8</org.apache.oozie.version>
