--- a/mapreduce/pom.xml
+++ b/mapreduce/pom.xml
@@ -19,13 +19,13 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <org.apache.hbase.version>1.1.2.2.6.0.3-8</org.apache.hbase.version>
+        <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
       </properties>
     </profile>
     <profile>
       <id>cdh514</id>
       <properties>
-        <org.apache.hbase.version>1.2.0-cdh5.14.0</org.apache.hbase.version>
+        <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
       </properties>
     </profile>
     <profile>
