--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <dependency.pig.classifier>h2</dependency.pig.classifier>
     <org.apache.oozie.version>4.2.0.2.6.0.3-8</org.apache.oozie.version>
     <org.apache.hive.version>1.2.1000.2.6.0.3-8</org.apache.hive.version>
-    <org.apache.hbase.version>1.1.2.2.6.0.3-8</org.apache.hbase.version>
+    <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
     <shim-bundle-plugin.version>1.1</shim-bundle-plugin.version>
     <htrace-core.version>3.1.0-incubating</htrace-core.version>
     <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
