--- a/shims/hdp26/driver/pom.xml
+++ b/shims/hdp26/driver/pom.xml
@@ -37,7 +37,7 @@
     <!-- client and default folders -->
     <org.apache.hadoop.version>2.7.3.2.6.0.3-8</org.apache.hadoop.version>
     <!-- pmr folder -->
-    <org.apache.hbase.version>1.1.2.2.6.0.3-8</org.apache.hbase.version>
+    <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
     <zookeeper.version>3.4.6.2.6.0.3-8</zookeeper.version>
     <htrace-core.version>2.04</htrace-core.version>
     <protobuf-java.version>2.5.0</protobuf-java.version>
