--- a/shims/hdp26/pmr/pom.xml
+++ b/shims/hdp26/pmr/pom.xml
@@ -13,7 +13,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <org.apache.hbase.version>1.1.2.2.6.0.3-8</org.apache.hbase.version>
+    <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
   </properties>
 
   <dependencies>
