--- a/shims/mapr61/driver/pom.xml
+++ b/shims/mapr61/driver/pom.xml
@@ -15,7 +15,7 @@
     <pentaho-osgi-bundles.version>9.3.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
     <org.apache.avro.version>1.8.0</org.apache.avro.version>
     <org.apache.hadoop.version>2.7.0-mapr-1808</org.apache.hadoop.version>
-    <org.apache.hbase.version>1.1.8-mapr-1901</org.apache.hbase.version>
+    <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
     <vendor.hbase.version>6.1.0-mapr</vendor.hbase.version>
     <org.apache.hive.version>2.3.3-mapr-1901</org.apache.hive.version>
     <org.apache.oozie.version>5.1.0.0-mapr-1901</org.apache.oozie.version>
