--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -21,387 +21,7 @@
   </properties>
 
   <profiles>
-    <profile>
-      <id>cdh514</id>
-      <properties>
-        <org.apache.hadoop.version-cdh514>2.6.0-cdh5.14.0</org.apache.hadoop.version-cdh514>
-        <org.apache.hbase.version>1.2.0-cdh5.14.0</org.apache.hbase.version>
-        <org.apache.hive.version>1.1.0-cdh5.14.0</org.apache.hive.version>
-        <org.apache.oozie.version>4.1.0-cdh5.14.0</org.apache.oozie.version>
-        <parquet.version>1.8.1</parquet.version>
-        <parquet.cloudera.version>1.5.0-cdh5.14.0</parquet.cloudera.version>
-        <pig.version>0.12.0-cdh5.14.0</pig.version>
-        <sqoop.version>1.4.6-cdh5.14.0</sqoop.version>
-        <zookeeper.version>3.4.5-cdh5.14.0</zookeeper.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.karaf.jaas</groupId>
-          <artifactId>org.apache.karaf.jaas.config</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>com.twitter</groupId>
-          <artifactId>parquet-hadoop</artifactId>
-          <version>${parquet.cloudera.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>com.twitter</groupId>
-          <artifactId>parquet-hadoop-bundle</artifactId>
-          <version>${parquet.cloudera.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.avro</groupId>
-          <artifactId>avro</artifactId>
-          <version>${org.apache.avro.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.avro</groupId>
-          <artifactId>avro-mapred</artifactId>
-          <version>${org.apache.avro.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hive</groupId>
-          <artifactId>hive-jdbc</artifactId>
-          <version>${org.apache.hive.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hive</groupId>
-          <artifactId>hive-service</artifactId>
-          <version>${org.apache.hive.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.orc</groupId>
-          <artifactId>orc-core</artifactId>
-          <version>${org.apache.orc.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.sqoop</groupId>
-          <artifactId>sqoop</artifactId>
-          <version>${sqoop.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-common</artifactId>
-          <version>${org.apache.hadoop.version-cdh514}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-hdfs</artifactId>
-          <version>${org.apache.hadoop.version-cdh514}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-mapreduce-client-core</artifactId>
-          <version>${org.apache.hadoop.version-cdh514}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-yarn-api</artifactId>
-          <version>${org.apache.hadoop.version-cdh514}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-client</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-common</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-hadoop-compat</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-protocol</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-server</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.oozie</groupId>
-          <artifactId>oozie-client</artifactId>
-          <version>${org.apache.oozie.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.parquet</groupId>
-          <artifactId>parquet-hadoop-bundle</artifactId>
-          <version>${parquet.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.pig</groupId>
-          <artifactId>pig</artifactId>
-          <version>${pig.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.zookeeper</groupId>
-          <artifactId>zookeeper</artifactId>
-          <version>${zookeeper.version}</version>
-          <scope>provided</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>cdh61</id>
-      <properties>
-        <org.apache.hadoop.version-cdh61>3.0.0-cdh6.1.0</org.apache.hadoop.version-cdh61>
-        <org.apache.hbase.version>2.1.0-cdh6.1.0</org.apache.hbase.version>
-        <org.apache.hive.version>2.1.1-cdh6.1.0</org.apache.hive.version>
-        <org.apache.oozie.version>5.0.0-cdh6.1.0</org.apache.oozie.version>
-        <parquet.version>1.8.1</parquet.version>
-        <parquet.cloudera.version>1.5.0-cdh5.14.0</parquet.cloudera.version>
-        <pig.version>0.17.0-cdh6.1.0</pig.version>
-        <sqoop.version>1.4.7-cdh6.1.0</sqoop.version>
-        <zookeeper.version>3.4.5-cdh6.1.0</zookeeper.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.twitter</groupId>
-          <artifactId>parquet-hadoop</artifactId>
-          <version>${parquet.cloudera.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>com.twitter</groupId>
-          <artifactId>parquet-hadoop-bundle</artifactId>
-          <version>${parquet.cloudera.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.avro</groupId>
-          <artifactId>avro</artifactId>
-          <version>${org.apache.avro.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.avro</groupId>
-          <artifactId>avro-mapred</artifactId>
-          <version>${org.apache.avro.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hive</groupId>
-          <artifactId>hive-jdbc</artifactId>
-          <version>${org.apache.hive.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hive</groupId>
-          <artifactId>hive-service</artifactId>
-          <version>${org.apache.hive.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.orc</groupId>
-          <artifactId>orc-core</artifactId>
-          <version>${org.apache.orc.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.sqoop</groupId>
-          <artifactId>sqoop</artifactId>
-          <version>${sqoop.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-common</artifactId>
-          <version>${org.apache.hadoop.version-cdh61}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>commons-configuration</groupId>
-          <artifactId>commons-configuration</artifactId>
-          <version>1.6</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-hdfs</artifactId>
-          <version>${org.apache.hadoop.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-mapreduce-client-core</artifactId>
-          <version>${org.apache.hadoop.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-yarn-api</artifactId>
-          <version>${org.apache.hadoop.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-client</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-common</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-hadoop-compat</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-protocol</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-server</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.oozie</groupId>
-          <artifactId>oozie-client</artifactId>
-          <version>${org.apache.oozie.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.parquet</groupId>
-          <artifactId>parquet-hadoop-bundle</artifactId>
-          <version>${parquet.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.pig</groupId>
-          <artifactId>pig</artifactId>
-          <version>${pig.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.zookeeper</groupId>
-          <artifactId>zookeeper</artifactId>
-          <version>${zookeeper.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>com.yammer.metrics</groupId>
-          <artifactId>metrics-core</artifactId>
-          <version>2.2.0</version>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.htrace</groupId>
-          <artifactId>htrace-core</artifactId>
-          <version>3.2.0-incubating</version>
-          <scope>compile</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>emr521</id>
-      <properties>
-        <org.apache.avro.version>1.8.0</org.apache.avro.version>
-        <org.apache.hive.version>2.3.4</org.apache.hive.version>
-        <org.apache.oozie.version>5.0.0</org.apache.oozie.version>
-        <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
-        <org.apache.hadoop.version-emr521>2.8.5</org.apache.hadoop.version-emr521>
-        <sqoop.version>1.4.7</sqoop.version>
-        <pig.version>0.17.0</pig.version>
-        <parquet.cloudera.version>1.5.0-cdh5.14.0</parquet.cloudera.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.twitter</groupId>
-          <artifactId>parquet-hadoop-bundle</artifactId>
-          <version>${parquet.cloudera.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.avro</groupId>
-          <artifactId>avro</artifactId>
-          <version>${org.apache.avro.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.avro</groupId>
-          <artifactId>avro-mapred</artifactId>
-          <version>${org.apache.avro.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hive</groupId>
-          <artifactId>hive-jdbc</artifactId>
-          <version>${org.apache.hive.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.orc</groupId>
-          <artifactId>orc-core</artifactId>
-          <version>${org.apache.orc.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.sqoop</groupId>
-          <artifactId>sqoop</artifactId>
-          <version>${sqoop.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hbase</groupId>
-          <artifactId>hbase-server</artifactId>
-          <version>${org.apache.hbase.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.oozie</groupId>
-          <artifactId>oozie-client</artifactId>
-          <version>${org.apache.oozie.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-common</artifactId>
-          <version>${org.apache.hadoop.version-emr521}</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.pig</groupId>
-          <artifactId>pig</artifactId>
-          <version>${pig.version}</version>
-          <scope>provided</scope>
-        </dependency>
-      </dependencies>
-    </profile>
+
     <profile>
       <id>hdp26</id>
       <activation>
@@ -409,7 +29,7 @@
       </activation>
       <properties>
         <org.apache.avro.version>1.8.0</org.apache.avro.version>
-        <org.apache.hbase.version>1.1.2.2.6.0.3-8</org.apache.hbase.version>
+        <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
         <org.apache.hadoop.version-hdp26>2.7.3.2.6.0.3-8</org.apache.hadoop.version-hdp26>
         <org.apache.hive.version>1.2.1000.2.6.0.3-8</org.apache.hive.version>
         <org.apache.oozie.version>4.2.0.2.6.0.3-8</org.apache.oozie.version>
@@ -471,6 +91,12 @@
           <artifactId>hbase-server</artifactId>
           <version>${org.apache.hbase.version}</version>
           <scope>provided</scope>
+          <exclusions>
+            <exclusion>
+              <groupId>org.apache.hadoop</groupId>
+              <artifactId>hadoop-auth</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
         <dependency>
           <groupId>org.apache.oozie</groupId>
@@ -576,39 +202,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-core</artifactId>
-      <version>${org.powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito</artifactId>
-      <version>${org.powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>${org.powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4-common</artifactId>
-      <version>${org.powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-support</artifactId>
-      <version>${org.powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-reflect</artifactId>
-      <version>${org.powermock.version}</version>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${org.mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
