--- a/mapreduce/pom.xml
+++ b/mapreduce/pom.xml
@@ -12,34 +12,21 @@
   <version>9.3.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <profiles>
-    <profile>
-      <id>hdp26</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <org.apache.hbase.version>1.1.2.2.6.0.3-8</org.apache.hbase.version>
-      </properties>
-    </profile>
-    <profile>
-      <id>cdh514</id>
-      <properties>
-        <org.apache.hbase.version>1.2.0-cdh5.14.0</org.apache.hbase.version>
-      </properties>
-    </profile>
-    <profile>
-      <id>emr521</id>
-      <properties>
-        <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
-      </properties>
-    </profile>
-  </profiles>
+  <properties>
+    <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-server</artifactId>
       <version>${org.apache.hbase.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-auth</artifactId>
+        </exclusion>
+      </exclusions>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -54,7 +41,7 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
       <version>${org.mockito.version}</version>
       <scope>test</scope>
     </dependency>
