--- a/shim-api/pom.xml
+++ b/shim-api/pom.xml
@@ -25,7 +25,7 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
       <version>${org.mockito.version}</version>
       <scope>test</scope>
     </dependency>
