--- a/shims/mapr60/pmr/pom.xml
+++ b/shims/mapr60/pmr/pom.xml
@@ -14,7 +14,7 @@
     <version>9.3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <org.apache.hbase.version>2.1.0-cdh6.1.0</org.apache.hbase.version>
+        <org.apache.hbase.version>1.4.0</org.apache.hbase.version>
     </properties>
     <dependencies>
         <dependency>
