--- a/shims/mapr61/pmr/pom.xml
+++ b/shims/mapr61/pmr/pom.xml
@@ -14,7 +14,7 @@
     <version>9.3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <org.apache.hbase.version>1.1.8-mapr-1901</org.apache.hbase.version>
+        <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
     </properties>
     <dependencies>
         <dependency>
