--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -8,7 +8,7 @@
     <version>9.1.2021.06.00-629</version>
   </parent>
   <artifactId>pentaho-hadoop-shims-apache-driver</artifactId>
-  <version>9.1.2021.06.00-629</version>
+  <version>9.1.2021.06.00-CUST-255</version>
   <packaging>bundle</packaging>
   <properties>
     <vendor-driver.version>3.0.0.0.apache</vendor-driver.version>
