--- a/shims/apache/kar/pom.xml
+++ b/shims/apache/kar/pom.xml
@@ -17,12 +17,12 @@
     <dependency>
       <groupId>org.pentaho.hadoop.shims</groupId>
       <artifactId>pentaho-hadoop-shims-common-dependencies-V1</artifactId>
-      <version>${project.version}</version>
+      <version>9.1.2021.06.00-629</version>
     </dependency>
     <dependency>
       <groupId>org.pentaho.hadoop.shims</groupId>
       <artifactId>pentaho-hadoop-shims-common-fragment-V1</artifactId>
-      <version>${project.version}</version>
+      <version>9.1.2021.06.00-629</version>
     </dependency>
     <dependency>
       <groupId>org.pentaho.hadoop.shims</groupId>
