--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -107,7 +107,7 @@
     <dependency>
       <groupId>org.pentaho.hadoop.shims</groupId>
       <artifactId>pentaho-hadoop-shims-common-fragment-V1</artifactId>
-      <version>${project.version}</version>
+      <version>9.1.2021.06.00-629</version>
     </dependency>
     <dependency>
       <groupId>org.pentaho</groupId>
