--- a/shims/pom.xml
+++ b/shims/pom.xml
@@ -10,7 +10,7 @@
 
 <groupId>org.pentaho.hadoop.shims</groupId>
 <artifactId>pentaho-hadoop-shims-list</artifactId>
-<version>9.3.0.0-SNAPSHOT</version>
+<version>9.3.2021.05.00-10</version>
 <packaging>pom</packaging>
 
 <properties>
