--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.0.0-7</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims</artifactId>
-  <version>9.3.0.0-SNAPSHOT</version>
+  <version>9.3.2021.05.00-7</version>
   <packaging>pom</packaging>
 
   <properties>
     <junit.version>4.11</junit.version>
-    <eula-wrap_create-dist-phase></eula-wrap_create-dist-phase>
+    <eula-wrap_create-dist-phase/>
     <org.mockito.version>3.12.4</org.mockito.version>
     <org.hamcrest.version>1.3</org.hamcrest.version>
-    <pentaho-hdfs-vfs.version>9.3.0.0-SNAPSHOT</pentaho-hdfs-vfs.version>
-    <platform.version>9.3.0.0-SNAPSHOT</platform.version>
-    <eula-wrap_attach-dist-phase></eula-wrap_attach-dist-phase>
+    <pentaho-hdfs-vfs.version>9.3.0.0-7</pentaho-hdfs-vfs.version>
+    <platform.version>9.3.0.0-7</platform.version>
+    <eula-wrap_attach-dist-phase/>
     <commons-beanutils.version>1.9.3</commons-beanutils.version>
     <commons-io.version>2.4</commons-io.version>
     <xerces.version>2.8.1</xerces.version>
-    <oss-licenses.version>9.3.0.0-SNAPSHOT</oss-licenses.version>
-    <eula-wrap_create-izpack-installer-jar-phase></eula-wrap_create-izpack-installer-jar-phase>
-    <pdi.version>9.3.0.0-SNAPSHOT</pdi.version>
-    <eula-wrap_assign-deps-to-properties-phase></eula-wrap_assign-deps-to-properties-phase>
-    <pentaho-osgi-bundles.version>9.3.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
-    <big-data-plugin.version>9.3.0.0-SNAPSHOT</big-data-plugin.version>
+    <oss-licenses.version>9.3.0.0-7</oss-licenses.version>
+    <eula-wrap_create-izpack-installer-jar-phase/>
+    <pdi.version>9.3.0.0-7</pdi.version>
+    <eula-wrap_assign-deps-to-properties-phase/>
+    <pentaho-osgi-bundles.version>9.3.0.0-7</pentaho-osgi-bundles.version>
+    <big-data-plugin.version>9.3.0.0-7</big-data-plugin.version>
     <org.apache.orc.version>1.2.3</org.apache.orc.version>
     <org.apache.parquet.version>1.8.1</org.apache.parquet.version>
     <twitter.parquet.version>1.5.0-cdh5.13.0</twitter.parquet.version>
