--- a/shims/mapr61/pmr/pom.xml
+++ b/shims/mapr61/pmr/pom.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.pentaho.hadoop.shims</groupId>
         <artifactId>pentaho-hadoop-shims-mapr61-reactor</artifactId>
-        <version>9.3.0.0-SNAPSHOT</version>
+        <version>9.3.2021.05.00-11</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pentaho-hadoop-shims-mapr61-pmr-libs</artifactId>
 
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.2021.05.00-11</version>
     <packaging>pom</packaging>
     <properties>
         <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
