--- a/common/modern/pom.xml
+++ b/common/modern/pom.xml
@@ -37,5 +37,10 @@
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-jdbc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
