--- a/shims/cdh512/impl/pom.xml
+++ b/shims/cdh512/impl/pom.xml
@@ -11,7 +11,6 @@
   <packaging>jar</packaging>
   <version>8.3.0.0-SNAPSHOT</version>
   <properties>
-    <log4j.version>1.2.14</log4j.version>
     <commons-collections.version>3.2.2</commons-collections.version>
     <shim.type>CDH</shim.type>
   </properties>
@@ -77,10 +76,9 @@
       <artifactId>kettle-engine</artifactId>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
-      <scope>provided</scope>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
