[SP-6106] [BACKLOG-35524] Further log4j cleanup

--- a/shims/hdi35/client/pom.xml
+++ b/shims/hdi35/client/pom.xml
@@ -131,6 +131,10 @@
           <groupId>javax.xml.stream</groupId>
           <artifactId>stax-api</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
