[SP-6106] - Backport of BISERVER-14720 - Upgrade log4j

--- a/shims/emr521/impl/pom.xml
+++ b/shims/emr521/impl/pom.xml
@@ -27,6 +27,16 @@
       <type>pom</type>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.pentaho</groupId>
       <artifactId>pentaho-hadoop-shims-emr521-scope-pmr</artifactId>
       <version>${project.version}</version>
