--- a/common/pom.xml
+++ b/common/pom.xml
@@ -59,6 +59,16 @@
         <artifactId>hive-jdbc</artifactId>
         <version>${org.apache.hive.version}</version>
         <scope>provided</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.pig</groupId>
