--- a/shims/hdp25/impl/pom.xml
+++ b/shims/hdp25/impl/pom.xml
@@ -162,6 +162,10 @@
           <groupId>org.xerial.snappy</groupId>
         </exclusion>
         <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <exclusion>
           <artifactId>commons-beanutils-core</artifactId>
           <groupId>commons-beanutils</groupId>
         </exclusion>
@@ -345,6 +349,16 @@
       <artifactId>hive-jdbc</artifactId>
       <version>${org.apache.hive.version}</version>
       <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
