--- a/shims/hdp30/default/pom.xml
+++ b/shims/hdp30/default/pom.xml
@@ -145,6 +145,14 @@
           <groupId>org.apache.hbase</groupId>
           <artifactId>hbase-common</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
