--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -564,7 +564,7 @@
     <dependency>
       <groupId>org.pentaho</groupId>
       <artifactId>pentaho-hadoop-shims-common-mapreduce</artifactId>
-      <version>${project.version}</version>
+      <version>9.2.2022.01.26-CUST-261</version>
       <scope>test</scope>
     </dependency>
     <dependency>
