--- a/mapreduce/pom.xml
+++ b/mapreduce/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>9.2.2022.01.26-482</version>
+    <version>9.2.2022.01.26-CUST-261</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-common-mapreduce</artifactId>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>org.pentaho</groupId>
       <artifactId>shim-api</artifactId>
-      <version>9.2.2022.01.26-482</version>
+      <version>9.2.2022.01.26-CUST-261</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
