--- a/shims/emr511/impl/pom.xml
+++ b/shims/emr511/impl/pom.xml
@@ -92,6 +92,18 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- supplied in data-integration/lib at runtime -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-1.2-api</artifactId>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
     <dependency>
       <groupId>pentaho-kettle</groupId>
       <artifactId>kettle-core</artifactId>
