--- a/shims/cdh61/kar/pom.xml
+++ b/shims/cdh61/kar/pom.xml
@@ -29,6 +29,17 @@
       <artifactId>pentaho-hadoop-shims-cdh61-driver</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>28.1-jre</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>failureaccess</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+
   </dependencies>
 
 </project>
