[BACKLOG-40227][BACKLOG-40228][BACKLOG-40229][BACKLOG-40230]

--- a/shims/cdpdc71/driver/pom.xml
+++ b/shims/cdpdc71/driver/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <commons-lang.version>2.6</commons-lang.version>
+    <guava.version>31.1-jre</guava.version>
     <failureaccess.version>1.0.1</failureaccess.version>
     <pentaho-osgi-bundles.version>11.0.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
     <org.apache.avro.version>1.8.2.7.1.4.0-203</org.apache.avro.version>
