--- a/shims/dataproc1421/pom.xml
+++ b/shims/dataproc1421/pom.xml
@@ -16,6 +16,7 @@
 
     <!-- GCP properties -->
     <gcs-connector.version>hadoop2-2.2.24</gcs-connector.version>
+    <dataproc.guava.version>24.0-jre</dataproc.guava.version>
 
     <!-- default folder -->
     <org.apache.hbase.version>2.6.1</org.apache.hbase.version>
@@ -47,6 +48,5 @@
   <modules>
     <module>driver</module>
     <module>pmr</module>
-    <module>kar</module>
   </modules>
 </project>
